Add datasets information

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -23,6 +23,8 @@
 \usepackage{algpseudocode}
 \usepackage{bm}
 \usepackage{multirow}
+\usepackage{booktabs}
+\usepackage{longtable}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
@@ -128,5 +130,6 @@
 \include{appendix/drl_algorithms}
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
+\include{appendix/datasets}
 
 \end{document}
