--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -822,6 +822,27 @@
   url     = {https://docs.wandb.ai/guides/integrations/stable-baselines-3/},
   year    = {2025}
 }
+@misc{WikipediaDowJones30,
+  author = {Wikipedia},
+  month  = {7},
+  title  = {Dow Jones Industrial Average - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/Dow_Jones_Industrial_Average},
+  year   = {2025}
+}
+@misc{WikipediaEuroStoxx50,
+  author = {Wikipedia},
+  month  = {7},
+  title  = {EURO STOXX 50 - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/EURO_STOXX_50},
+  year   = {2025}
+}
+@misc{WikipediaFtse100,
+  author = {Wikipedia},
+  month  = {8},
+  title  = {FTSE 100 Index - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/FTSE_100_Index},
+  year   = {2025}
+}
 @article{Wu2017,
   abstract  = {In this work, we propose to apply trust region optimization to deep reinforcement learning using a recently proposed Kronecker-factored approximation to the curvature. We extend the framework of natural policy gradient and propose to optimize both the actor and the critic using Kronecker-factored approximate curvature (K-FAC) with trust region; hence we call our method Actor Critic using Kronecker-Factored Trust Region (ACKTR). To the best of our knowledge, this is the first scalable trust region natural gradient method for actor-critic methods. It is also a method that learns non-trivial tasks in continuous control as well as discrete control policies directly from raw pixel inputs. We tested our approach across discrete domains in Atari games as well as continuous domains in the MuJoCo environment. With the proposed methods, we are able to achieve higher rewards and a 2- to 3-fold improvement in sample efficiency on average, compared to previous state-of-the-art on-policy actor-critic methods. Code is available at https://github.com/openai/baselines},
   author    = {Yuhuai Wu and Elman Mansimov and Shun Liao and Roger Grosse and Jimmy Ba},
