Add index as benchmark

--- a/examples/backtesting.ipynb
+++ b/examples/backtesting.ipynb
@@ -217,6 +217,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4fb3ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_account_strat = benchmark.get_index_performance(\n",
+    "    config.TEST_START_DATE, config.TEST_END_DATE, config.INDEX\n",
+    ")\n",
+    "\n",
+    "df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
+    "\n",
+    "perf_stats_alg = benchmark.compute_perf_stats(df_account=df_account_strat)\n",
+    "perf_stats[\"Index\"] = perf_stats_alg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbc68b90",
    "metadata": {},
    "outputs": [],
