Fix missing macroeconomic indicators

--- a/examples/finpreprocessor.ipynb
+++ b/examples/finpreprocessor.ipynb
@@ -93,7 +93,11 @@
     "    use_tech_indicators=config.USE_TECHNICAL_INDICATORS,\n",
     "    tech_indicators=list(config_indicators.TECHNICAL_INDICATORS.keys()),\n",
     "    use_macro_indicators=config.USE_MACROECONOMIC_INDICATORS,\n",
-    "    macro_indicators=list(config.MACROECONOMIC_INDICATORS.keys()),\n",
+    "    macro_indicators=(\n",
+    "        list(config.MACROECONOMIC_INDICATORS.keys())\n",
+    "        if config.USE_MACROECONOMIC_INDICATORS\n",
+    "        else []\n",
+    "    ),\n",
     "    use_covariance=config.USE_COVARIANCE_FEATURES,\n",
     ")"
    ]
