--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -208,3 +208,4 @@
 \newacronym{hkd}{HKD}{Hong Kong Dollar}
 \newacronym{krw}{KRW}{South Korean Won}
 \newacronym{inr}{INR}{Indian Rupee}
+\newacronym{ohlcv}{OHLCV}{Open, High, Low, Close, Volume}
