Add evaluation metrics

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -209,3 +209,4 @@
 \newacronym{krw}{KRW}{South Korean Won}
 \newacronym{inr}{INR}{Indian Rupee}
 \newacronym{ohlcv}{OHLCV}{Open, High, Low, Close, Volume}
+\newacronym{var}{VaR}{Value at Risk}
