Add benchmark strategies

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -924,3 +924,15 @@
   url       = {https://onlinelibrary.wiley.com/doi/full/10.1002/widm.1519 https://onlinelibrary.wiley.com/doi/abs/10.1002/widm.1519 https://wires.onlinelibrary.wiley.com/doi/10.1002/widm.1519},
   year      = {2023}
 }
+@article{Martin2021,
+    doi = {10.21105/joss.03066},
+    url = {https://doi.org/10.21105/joss.03066},
+    year = {2021},
+    publisher = {The Open Journal},
+    volume = {6},
+    number = {61},
+    pages = {3066},
+    author = {Robert Andrew Martin},
+    title = {PyPortfolioOpt: portfolio optimization in Python},
+    journal = {Journal of Open Source Software}
+}
