Rename abbreviated section titles

--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -1,6 +1,6 @@
 \chapter{Algorithms} \label{app:algorithms}
 
-\section{Deep Reinforcement Learning Algorithms}
+\section{Deep Reinforcement Learning Algorithms} \label{app:drl_algorithms}
 
 \begin{algorithm}
 \label{alg:a2c}
