--- a/report/contents/methodology.tex
+++ b/report/contents/methodology.tex
@@ -6,7 +6,7 @@ This chapter covers the methodology and framework established to provide an expl
 
 The problem of \gls{portfoliooptimisation} is the task of finding an optimal allocation of financial assets in a portfolio to maximise expected returns while minimising risk. Thus, it is necessary to decide how to rebalance the portfolio at each time step in a highly stochastic and complex financial market. This can be formulated using a \acrfull{mdp} framework, where the agent interacts with the environment by deciding the optimal allocation based on the state of the environment at each time step to maximise the expected cumulative reward over time. \acrfull{drl} gives the agent the ability to learn the optimal policy directly from the environment by taking actions and receiving rewards. 
 
-\section{MDP Model} \label{sec:mdp-model}
+\section{Markov Decision Process (MDP) Model} \label{sec:mdp-model}
 
 Due to the dynamic, stochastic and interactive nature of financial markets, a \acrlong{mdp} is a suitable framework to model the problem. The main elements of the \acrshort{mdp} model are defined as follows:
 \begin{itemize}
@@ -68,7 +68,7 @@ Regardless of the choice of reward function, the goal of the agent is to learn a
 \end{equation} 
 where $T$ is the time horizon and $\gamma$ is the discount factor that determines the importance of future rewards. 
 
-\section{DRL Models} \label{sec:drl-models}
+\section{Deep Reinforcement Learning (DRL) Algorithms} \label{sec:drl-algorithms}
 
 The proposed solution is based on the \acrshort{drl} framework, which allows the agent to learn the optimal policy directly from the environment by taking actions and receiving rewards. The algorithms used are:
 \begin{itemize}
