Move metrics to appendix

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -132,5 +132,6 @@
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
 \include{appendix/datasets}
+\include{appendix/evaluation_metrics}
 
 \end{document}
