Update list of datasets in experiment

--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -42,7 +42,7 @@ Finally, the performance of the algorithms is closely related to the choice of h
 Overall, the experiments were designed to evaluate the performance of the implemented \acrshort{drl} algorithms in different scenarios, with the goal of finding the most suitable algorithm for portfolio optimisation. However, testing 5 algorithms on 5 distinct datasets with 4 possible environment representations and 2 potential reward functions would result in a total of 40 different experiments. Additionally, optimising the parameters for each experiment further expands the experimental space and significantly increases the computational time required. Due to limited computational resources\footnote{The university did not provide access to a computing cluster; therefore, all experiments were conducted on a personal computer.}, the scope of experiments was adjusted as follows:
 \begin{itemize}
     \item Hyper-parameter tuning was performed only for the Dow Jones 30 dataset, as it is the smallest dataset and requires less computational time.
-    \item Since the covariance matrix, significantly increases the dimensionality of the environment representation, it was only included in the experiments with the Dow Jones 30 dataset, the currencies dataset and the commodities dataset.
+    \item Since the covariance matrix, significantly increases the dimensionality of the environment representation, it was only included in the experiments with the Dow Jones 30, the currencies and the commodities datasets.
     \item The reward function was set to the change in portfolio value for all experiments, as it is the most straightforward and intuitive choice for portfolio optimisation. However, the Sharpe ratio was also tested in the Dow Jones 30 dataset to evaluate its performance.
 \end{itemize}
 
