Report: Results - Datasets and Experiment Design (#29)

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -17,12 +17,14 @@
 \usepackage{graphbox}
 \usepackage{pgfgantt}
 \usepackage{nomencl}
-\usepackage[acronym]{glossaries}
+\usepackage[acronym,nonumberlist]{glossaries}
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{bm}
 \usepackage{multirow}
+\usepackage{booktabs}
+\usepackage{longtable}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
@@ -95,6 +97,7 @@
 
 %%%%% List of acronyms
 \include{contents/glossary}
+\setglossarystyle{list}
 \printglossary
 \printglossary[type=\acronymtype]
 \newpage
@@ -128,5 +131,7 @@
 \include{appendix/drl_algorithms}
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
+\include{appendix/datasets}
+\include{appendix/evaluation_metrics}
 
 \end{document}
