--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -1,4 +1,6 @@
-\chapter{DRL Algorithms} \label{app:drl_algorithms}
+\chapter{Algorithms} \label{app:algorithms}
+
+\section{Deep Reinforcement Learning Algorithms} \label{app:drl_algorithms}
 
 \begin{algorithm}
 \label{alg:a2c}
@@ -28,4 +30,12 @@
 \label{alg:sac}
 \caption{Soft Actor-Critic (SAC) Pseudo-code}
 \input{algorithms/alg_sac.tex}
+\end{algorithm}
+
+\section{Explainability Algorithms}
+
+\begin{algorithm}
+\caption{Shapley Value Approximation}
+\input{algorithms/alg_shapley_values.tex}
+\label{alg:shapley}
 \end{algorithm}
