--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -197,3 +197,16 @@
 \newacronym{djia}{DJIA}{Dow Jones Industrial Average}
 \newacronym{eu}{EU}{European Union}
 \newacronym{saac}{SAAC}{Synchronous Advantage Actor Critic}
+\newacronym{usd}{USD}{United States Dollar}
+\newacronym{eur}{EUR}{Euro}
+\newacronym{gbp}{GBP}{British Pound}
+\newacronym{jpy}{JPY}{Japanese Yen}
+\newacronym{aud}{AUD}{Australian Dollar}
+\newacronym{cad}{CAD}{Canadian Dollar}
+\newacronym{cny}{CNY}{Chinese Yuan}
+\newacronym{chf}{CHF}{Swiss Franc}
+\newacronym{hkd}{HKD}{Hong Kong Dollar}
+\newacronym{krw}{KRW}{South Korean Won}
+\newacronym{inr}{INR}{Indian Rupee}
+\newacronym{ohlcv}{OHLCV}{Open, High, Low, Close, Volume}
+\newacronym{var}{VaR}{Value at Risk}
