--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -469,6 +469,18 @@
   url       = {https://www.jstor.org/stable/2975974},
   year      = {1952}
 }
+@article{Martin2021,
+  doi       = {10.21105/joss.03066},
+  url       = {https://doi.org/10.21105/joss.03066},
+  year      = {2021},
+  publisher = {The Open Journal},
+  volume    = {6},
+  number    = {61},
+  pages     = {3066},
+  author    = {Robert Andrew Martin},
+  title     = {PyPortfolioOpt: portfolio optimization in Python},
+  journal   = {Journal of Open Source Software}
+}
 @article{Millea2021,
   abstract  = {Deep reinforcement learning (DRL) has achieved significant results in many machine learning (ML) benchmarks. In this short survey, we provide an overview of DRL applied to trading on financial markets with the purpose of unravelling common structures used in the trading community using DRL, as well as discovering common issues and limitations of such approaches. We include also a short corpus summarization using Google Scholar. Moreover, we discuss how one can use hierarchy for dividing the problem space, as well as using model-based RL to learn a world model of the trading environment which can be used for prediction. In addition, multiple risk measures are defined and discussed, which not only provide a way of quantifying the performance of various algorithms, but they can also act as (dense) reward-shaping mechanisms for the agent. We discuss in detail the various state representations used for financial markets, which we consider critical for the success and efficiency of such DRL agents. The market in focus for this survey is the cryptocurrency market; the results of this survey are two-fold: firstly, to find the most promising directions for further research and secondly, to show how a lack of consistency in the community can significantly impede research and the development of DRL agents for trading.},
   author    = {Adrian Millea and Francisco Guijarro},
@@ -576,6 +588,12 @@
   volume   = {Internal Report 8312},
   url      = {https://doi.org/10.6028/NIST.IR.8312},
   year     = {2021}
+}
+@misc{pyfolio,
+  author  = {Quantopian Inc},
+  title   = {pyfolio},
+  journal = {GitHub},
+  url     = {https://quantopian.github.io/pyfolio/}
 }
 @article{Raffin2021,
   author  = {Antonin Raffin and Ashley Hill and Adam Gleave and Anssi Kanervisto and Maximilian Ernestus and Noah Dormann},
@@ -822,6 +840,27 @@
   url     = {https://docs.wandb.ai/guides/integrations/stable-baselines-3/},
   year    = {2025}
 }
+@misc{WikipediaDowJones30,
+  author = {Wikipedia},
+  month  = {7},
+  title  = {Dow Jones Industrial Average - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/Dow_Jones_Industrial_Average},
+  year   = {2025}
+}
+@misc{WikipediaEuroStoxx50,
+  author = {Wikipedia},
+  month  = {7},
+  title  = {EURO STOXX 50 - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/EURO_STOXX_50},
+  year   = {2025}
+}
+@misc{WikipediaFtse100,
+  author = {Wikipedia},
+  month  = {8},
+  title  = {FTSE 100 Index - Wikipedia},
+  url    = {https://en.wikipedia.org/wiki/FTSE_100_Index},
+  year   = {2025}
+}
 @article{Wu2017,
   abstract  = {In this work, we propose to apply trust region optimization to deep reinforcement learning using a recently proposed Kronecker-factored approximation to the curvature. We extend the framework of natural policy gradient and propose to optimize both the actor and the critic using Kronecker-factored approximate curvature (K-FAC) with trust region; hence we call our method Actor Critic using Kronecker-Factored Trust Region (ACKTR). To the best of our knowledge, this is the first scalable trust region natural gradient method for actor-critic methods. It is also a method that learns non-trivial tasks in continuous control as well as discrete control policies directly from raw pixel inputs. We tested our approach across discrete domains in Atari games as well as continuous domains in the MuJoCo environment. With the proposed methods, we are able to achieve higher rewards and a 2- to 3-fold improvement in sample efficiency on average, compared to previous state-of-the-art on-policy actor-critic methods. Code is available at https://github.com/openai/baselines},
   author    = {Yuhuai Wu and Elman Mansimov and Shun Liao and Roger Grosse and Jimmy Ba},
@@ -863,6 +902,12 @@
   title     = {Deep reinforcement learning for automated stock trading: An ensemble strategy},
   url       = {https://dl.acm.org/doi/10.1145/3383455.3422540},
   year      = {2020}
+}
+@misc{yfinance,
+  author  = {ranaroussi},
+  journal = {GitHub},
+  title   = {finance - Python library},
+  url     = {https://github.com/ranaroussi/yfinance}
 }
 @article{Zhang2019,
   abstract  = {We adopt Deep Reinforcement Learning algorithms to design trading strategies for continuous futures contracts. Both discrete and continuous action spaces are considered and volatility scaling is incorporated to create reward functions which scale trade positions based on market volatility. We test our algorithms on the 50 most liquid futures contracts from 2011 to 2019, and investigate how performance varies across different asset classes including commodities, equity indices, fixed income and FX markets. We compare our algorithms against classical time series momentum strategies, and show that our method outperforms such baseline models, delivering positive profits despite heavy transaction costs. The experiments show that the proposed algorithms can follow large market trends without changing positions and can also scale down, or hold, through consolidation periods.},
